--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 *{
     font-family: 'Poppins', sans-serif;
 }
+button{
+    cursor: pointer;
+}
 body , header,html, nav{
     margin: 0;
     padding: 0;
@@ -132,26 +135,28 @@ span.btn_txt{
     justify-content: space-evenly;
 }
 .galery_item{
-    width: 22.5vw;
-    height:  40.520833333333336vw;
+    width: 20%;
+    -webkit-box-shadow: 5px 7px 23px -1px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 5px 7px 23px -1px rgba(66, 68, 90, 1);
+    box-shadow: 5px 7px 23px -1px rgba(66, 68, 90, 1);
     background-color: #ffffff;
     border-color: #000000;
     border-style: outset;
     border-width: 0.10416666666666667vw;
-    border-radius: 5.208333333333333vw;
+    border-radius: 100px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
 .problems_headline,.problems_txt {
     text-align: center;
-    margin-bottom: 3vw;
+    margin-bottom: 2vw;
     font-family: 'Poppins',sans-serif;
 }
 .problems_headline{
     font-size: 1.5vw;
     font-weight: 600;
-    letter-spacing: 0.2vw;
+    letter-spacing: 0.1vw;
 }
 .problems_txt{
     width: 19vw;
@@ -164,15 +169,15 @@ span.btn_txt{
 }
 .problematic_img{
     align-self: center;
-    width: 21vw ;
+    width: 100%;
     overflow: hidden;
-    object-fit: contain;
-    margin-top: 3%;
-    border-radius: 5.208333333333333vw 5.208333333333333vw 0  0;
+    object-fit: cover;
+    object-position: 50% 50%;
+    border-radius: 100px 100px 0  0;
 
 }
 #technologie{
-    height: 100vh;
+    height: 70vh;
     width: 100%;
     background-color: black;
     display: flex;
@@ -211,7 +216,7 @@ span.btn_txt{
     color: #fff;
 }
 .technologie_btn{
-    width:  21vw;
+    width:  18vw;
     height: 2.7vw;
     border: 1px solid #fcfcfc;
     background-color: #000000;
@@ -219,7 +224,7 @@ span.btn_txt{
 span#technologie_btn_txt{
     font-family: 'Poppins';
     font-weight: 200;
-    font-size: 0.8vw;
+    font-size: 1.2vw;
     color: #fcfcfc;
 }
 #road_map{
@@ -272,8 +277,8 @@ div#road_map_content{
     grid-template-columns: repeat(3,auto);
     grid-gap: 0.5vw;
     grid-template-rows: repeat(2,auto);
-    padding: 0.5vw;
-    justify-content: space-around;
+    padding: 2vw 0 0 0;
+    justify-content: space-evenly;
 }
 div.road_map_content_item{
     display: flex;
@@ -281,50 +286,51 @@ div.road_map_content_item{
     align-items: center;
 }
 img.road_map_item_img{
-    width: 13%;
+    width: 2vw;
     aspect-ratio: 1/1;
 }
 h6.road_map_item_title{
     font-family: 'Poppins';
-    font-size: 1vw;
+    font-size: 1.3vw;
     font-weight: 600;
-    margin: 1vw 0 0.5vw 0;
+    margin: 0;
+    margin-top: 0.7vw;
 }
 p.road_map_item_content{
     width: 70%;
     text-align: center;
     font-family: 'Poppins';
-    font-size: 0.7vw;
+    font-size: 0.8vw;
     font-weight: 300;
 }
 hr.road_map_item_line{
-    width: 100%;
+    width: 15vw;
 }
 p.road_map_item_time{
     font-family: 'Poppins';
-    font-size: 0.7vw;
+    font-size: 0.8vw;
 }
 #team{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     margin:0;
     padding: 0;
     width: 100%;
-    height: 80vh;
+    height: auto;
+    margin-bottom: 5vw;
 }
 .team_title{
     text-align: center;
     font-family: 'Poppins';
-    font-size: 3.9vw;
+    font-size: 2.9vw;
     margin: 0%;
     margin-bottom: 3%;
 }
 div.team_details_wrraper{
     display: flex;
-    width: 100%;
-    height: 40vw;
+    width: 90%;
+    height: 100%;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -332,6 +338,7 @@ div.team_details_item{
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
 
 }
 div.team_img_wrraper{
@@ -343,26 +350,26 @@ div.team_img_wrraper{
 img.team_img{
     max-width: 100%;
     height: auto;
-    transform: scale(1.5);
+    transform: scale(1.6);
 }
 h6.team_name{
     font-family:'Poppins';
-    font-size: 1.25vw;
+    font-size: 1.5vw;
     font-weight: 600;
     margin-bottom: 0;
 }
 p.team_member_responsobility{
     font-family: 'Poppins';
-    font-size: 0.8vw;
-    font-weight: 300;
+    font-size: 1.2vw;
+    font-weight: 400;
+    height: auto;
 }
 #offer{
     width: 100%;
-    height: 90vh;
+    height: 65vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
 }
 h6#offer_title{
     font-family:'Poppins';
@@ -370,7 +377,7 @@ h6#offer_title{
     font-weight: 600;
     text-align: center;
     position: absolute;
-    width: 80%;
+    width: 100%;
     color: #ffffff;
 }
 div#offer_content_wrraper{
@@ -384,11 +391,9 @@ div.offer_content_item{
     background-image: url('img/ai-technology-brain-background-digital-transformation-concept.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    margin-left: 1px;
-    width: 30vw;
+    width: 100%;
     height: 40vw;
-    padding-bottom: 0.8vw;
-    /* aspect-ratio: 16/9; */
+    padding-bottom:2vw;
 }
 span.offer_content_txt{
     width: 100%;
@@ -410,17 +415,18 @@ div#offer_img2{
     background-position: 75%;
 }
 div#offer_img3{
-    background-image: url('img/computer-program-code.jpg');
+    background-image: url('img/stationery-set-with-string-envelope-folders-business-cards-and-pencils.jpg');
 }
 #contact{
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 100vh;
+    margin-top: 5.2vw;
 }
 div#contact_img_wrraper{
     width: 50%;
-    height:95%;
+    height:100%;
     background-image: url('img/hand_shake.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -511,4 +517,149 @@ footer h6{
     display: inline-block;
     text-decoration: none;
     color: #000000;
+}
+@media (max-width:700px) {
+    .menu_list, .menu_list a{
+        font-size: 3vw;
+    }
+    .intro_title{
+        width: 90%;
+        font-size: 6vw;
+    }
+    .intro_txt{
+        width: 70%;
+        font-size: 3.5vw;
+    }
+    .introbutton{
+        width: 40vw;
+        height: 10vw;
+    }
+    span.btn_txt{
+        font-size: 2.5vw;
+    }
+    #problematics{
+        height: 150vh;
+        margin-bottom: 25px;
+    }
+    #problematic_head{
+        font-size: 4vw;
+    }
+    .galery{
+        height: 100%;
+        flex-direction: column;
+    }
+    .galery_item{
+        min-width: 150px;
+        min-height: 250px;
+        justify-content: flex-start;
+        margin-top: 10px;
+    }
+    .problematic_img{
+        justify-content: flex-start;
+        object-fit: cover;
+    }
+    .problems_headline{
+        font-size: 1.8vw;
+    }
+    .problems_txt{
+        font-size: 1.7vw;
+    }
+    #technologie{
+        height: 100vh;
+        flex-direction: column;
+        margin-bottom: 5px;
+    }
+    img#code_example{
+        height: 40%;
+        width: 100%;
+    }
+    .tech_wrraper{
+        height:50%;
+        justify-content: center;
+    }
+    #technologie_title{
+        font-size: 7vw;
+    }
+    .technologie_txt{
+        width: 100%;
+        font-size: 2.5vw;
+    }
+    .technologie_btn{
+        width:30vw;
+        height: 5vw;
+    }
+    span#technologie_btn_txt{
+        font-size: 1.5vw;
+    }
+    #road_map{
+        display: flex;
+        flex-direction: column;
+    }
+    div#road_map_content{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 0;
+    }
+    #road_map_img_wrraper{
+        visibility: hidden;
+    }
+    img.road_map_item_img{
+        visibility: hidden  ;
+    }
+    h6.road_map_item_title{
+        font-size: 6vw;
+    }
+    p.road_map_item_content{
+        font-size: 3vw;
+    }
+    hr.road_map_item_line{
+        width: 60vw;
+        background-color: #000000;
+        height: 0.1vw;
+    }
+    p.road_map_item_time{
+        font-size: 3vw;
+        margin-bottom: 0;
+    }
+    #road_map_title{
+        writing-mode: horizontal-tb;
+        transform: none;
+        text-align: center;
+        height: auto;
+        font-size: 10vw;
+        margin-bottom: 0;
+    }
+    #team{
+        margin-top: 30px;
+        margin-bottom: 0;
+        height: 120vw;
+    }
+    .team_title{
+        font-size: 8vw;
+    }
+    div.team_details_wrraper{
+        flex-direction: column;
+        justify-content: normal;
+        height: 60vh;
+    }
+    div.team_details_item{
+        height: 60vw;
+    }
+    div.team_img_wrraper{
+        width: 27vw;
+        height: 27vw;
+    }
+    h6.team_name{
+        font-size: 3vw;
+        margin: 0;
+        margin-top: 0.5vw;
+        margin-bottom: 0.5vw;
+    }
+    p.team_member_responsobility{
+        font-size: 2vw;
+        margin: 0%;
+        margin-top: 0.5vw;
+        margin-bottom: 1.2vw;
+    }
 }
